<resources>
    <string name="app_name">Training</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_button">Material Button</string>
    <string name="toggle_buttons">Toggle Buttons</string>
    <string name="chips">Chips</string>
    <string name="checkable">checkable</string>
    <string name="strok">Strok</string>
    <string name="corner_radius">Corner Radius</string>
    <string name="chip_icon">Chip Icon</string>

    <string name="switches">Switch</string>
    <string name="text_input_layout">Text Input Layout</string>
    <string name="enter_text">enter text</string>
    <string name="check_box">Check box</string>
</resources>